# anymate-cc

./: .mcp.json  CHANGELOG.md  LICENSE  README.md  README.zh.md  RELEASE_CHECKLIST_v0.1.0.md  RELEASE_NOTES_v0.1.0.md  mcp-launcher.py  pyproject.toml  test_e2e.py  test_fileops.py  test_mcp_e2e.py  test_unit_backends.py
.claude/: MCP_CONFIG.md  mcp.json
.github/workflows/: ci.yml
src/anymate/: __init__.py  bridge.py  config.py  models.py  server.py  tmux.py
src/anymate/backends/: __init__.py  base.py  codex.py  python_repl.py  shell.py  stdio.py
src/anymate/protocol/: __init__.py  fileops.py  messaging.py  paths.py  teams.py
tests/: test_security_fixes.py  test_shutdown_request.py
