[project]
name = "anymate-cc"
version = "0.1.0"
description = "Inject external programs as teammates into Claude Code Agent Teams"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "filelock>=3.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anymate"]

[project.scripts]
anymate = "anymate.server:main"
